--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,12 +22,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Use Node.js 20.x
-      uses: actions/setup-node@v4
-      with:
-        node-version: 20.x
-        cache: 'npm'
-    - run: npm run build
+    - uses: oven-sh/setup-bun@v2
+    - run: bun i
+    - run: bun run build
   deploy:
     environment:
       name: github-pages
